[package]
name = "syscall_tracer_aya-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
syscall_tracer_aya-common = { path = "../syscall_tracer_aya-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "syscall_tracer_aya"
path = "src/main.rs"
